# musl-toolchain

./: .gitattributes  README.md  build.sh  deterministic-tar.sh  generate-actions.py  musl-toolchain.BUILD.bazel.template  musl_cc_test_toolchain.bzl  musl_cc_toolchain_config.bzl  release.txt.template  static_host_compiler.patch
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: build.yaml  publish.yaml  release.yaml
test-workspaces/builder/: .bazelrc  BUILD.bazel
test-workspaces/tester/: .bazelrc  BUILD.bazel  run_built_binary_test.sh
