genrule(
    name = "generate_source",
    outs = ["main.cc"],
    cmd = """cat >$@ <<EOF
#include <stdio.h>

int main(void) {
  printf("Built on $$(uname) $$(uname -m)\\n");
  return 0;
}
EOF
""",
)

cc_binary(
    name = "binary",
    deps = [":library"],
)

cc_library(
    name = "library",
    srcs = ["main.cc"],
)

cc_test(
    name = "test",
    deps = [":library"],
)
