[
    sh_test(
        name = "run_built_binary_%s-%s_test" % (source_arch, source_os),
        srcs = ["run_built_binary_test.sh"],
        args = [
            "$(rootpath @built_binary_%s-%s//file:file)" % (source_arch, source_os),
            output_os,
            output_arch,
        ],
        data = ["@built_binary_%s-%s//file:file" % (source_arch, source_os)],
    )
    for source_os, source_arch, output_os, output_arch in [
        ("unknown-linux-gnu", "x86_64", "Linux", "x86_64"),
        ("unknown-linux-gnu", "aarch64", "Linux", "arm64"),
        ("apple-darwin", "x86_64", "Darwin", "x86_64"),
        ("apple-darwin", "aarch64", "Darwin", "arm64"),
    ]
]
